# cpp14_concepts

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: build.yml
include/: cpp14_concepts.hpp
test/: CMakeLists.txt
test/src/: test_constructible_from.cpp  test_convertible_to.cpp  test_copy_constructible.cpp  test_default_initializable.cpp  test_derived_from.cpp  test_destructible.cpp  test_equality_comparable.cpp  test_floating_point.cpp  test_integral.cpp  test_move_constructible.cpp  test_required_param.cpp  test_same_as.cpp  test_signed_integral.cpp  test_unsigned_integral.cpp
